<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wallkraft.app"
            android:targetClass="com.wallkraft.app.MainActivity"
            android:data="wallkraft://search" />
    </shortcut>
    <shortcut
        android:shortcutId="favorites"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_fav"
        android:shortcutShortLabel="@string/shortcut_favorites"
        android:shortcutLongLabel="@string/shortcut_favorites_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wallkraft.app"
            android:targetClass="com.wallkraft.app.MainActivity"
            android:data="wallkraft://favorites" />
    </shortcut>
    <shortcut
        android:shortcutId="downloads"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_dl"
        android:shortcutShortLabel="@string/shortcut_downloads"
        android:shortcutLongLabel="@string/shortcut_downloads_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.wallkraft.app"
            android:targetClass="com.wallkraft.app.MainActivity"
            android:data="wallkraft://downloads" />
    </shortcut>
</shortcuts>
